# fcw_jetson

./: CMakeLists.txt  debug_trace.txt
config/: camera_config.yaml  system_config.yaml  warning_config.yaml
datasets/bdd100k/: .gitkeep
datasets/kitti/: .gitkeep
models/: labels.txt
scripts/: benchmark.sh  build_jetson.sh  convert_model.sh  run_demo.sh
scripts/dataset/: README.md  bdd100k.yaml  bdd100k_to_yolo.py  export_model.py  scan_classes.py  train_yolov8_bdd100k.py
src/: main.cpp
src/camera/: camera.cpp  camera.h
src/core/: fcw_state.h  pipeline.cpp  pipeline.h  threaded_pipeline.cpp  threaded_pipeline.h
src/detection/: detection_result.h  nms.cpp  nms.h  yolov8_detector.cpp  yolov8_detector.h
src/distance/: bev_distance.cpp  bev_distance.h  camera_model.h  distance_estimator.cpp  distance_estimator.h
src/gui/: gui_app.cpp  gui_app.h
src/motion/: kitti_oxts_reader.cpp  kitti_oxts_reader.h  speed_estimator.cpp  speed_estimator.h
src/preprocessing/: image_preprocess.cpp  image_preprocess.h
src/risk/: collision_risk.cpp  collision_risk.h  risk_state.h
src/tracking/: hungarian.cpp  hungarian.h  object_tracker.cpp  object_tracker.h  track.cpp  track.h
src/ttc/: ttc_calculator.cpp  ttc_calculator.h
src/utils/: cuda_mingw_compat.cpp  logger.cpp  logger.h  math_utils.h  timer.cpp  timer.h
src/visualization/: visualization.cpp  visualization.h
src/warning/: audio_alert.cpp  warning_system.cpp  warning_system.h
